Configuring tests