@@ -61,6 +61,14 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M5</version>
+				<configuration>
+					<argLine>
+						--add-modules ALL-SYSTEM
+						--add-opens java.base/jdk.internal.util=ALL-UNNAMED
+						--add-opens io.vepo.twitter4j/io.vepo.twitter4j=ALL-UNNAMED
+						--illegal-access=permit
+					</argLine>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.sonarsource.scanner.maven</groupId>
